[package]
name = "rust_use"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web = "3"
rocket = "0.5.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }